--- a/DarkFit app/DarkFit app/App.xaml
+++ b/DarkFit app/DarkFit app/App.xaml
@@ -2,7 +2,8 @@
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DarkFit_app.App"
-             xmlns:local="clr-namespace:DarkFit_app">
+             xmlns:local="clr-namespace:DarkFit_app"
+             >
     <Application.Resources>
         <Style TargetType="NavigationPage">
             <Setter Property="BarBackgroundColor" Value="White" />
@@ -11,7 +12,10 @@
 
         <ResourceDictionary>
             <local:BoolToSymbolConverter x:Key="BoolToSymbolConverter" />
+            <local:ZeroToVisibilityConverter x:Key="ZeroToVisibilityConverter" />
         </ResourceDictionary>
+
+        
 
 
     </Application.Resources>
