--- a/DarkFit app/DarkFit app/NotificationPage.xaml
+++ b/DarkFit app/DarkFit app/NotificationPage.xaml
@@ -1,34 +1,63 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DarkFit_app.NotificationPage">
+             x:Class="DarkFit_app.NotificationPage"
+             Title="Уведомления"
+             BackgroundColor="White">
 
     <Shell.TitleView>
         <Grid ColumnDefinitions="60,*,60" VerticalOptions="Center">
             <Image Source="darkfitCaption.png"
-               HorizontalOptions="Start"
-               VerticalOptions="Center"
-               Grid.Column="0" />
+                   HorizontalOptions="Start"
+                   VerticalOptions="Center"
+                   Grid.Column="0" />
             <Label Text="Уведомления"
-               HorizontalOptions="Center"
-               VerticalOptions="Center"
-               HorizontalTextAlignment="Center"
-               FontSize="28"
-               FontAttributes="Bold"
-               TextColor="Black"
-               Grid.Column="1" />
-            
+                   HorizontalOptions="Center"
+                   VerticalOptions="Center"
+                   HorizontalTextAlignment="Center"
+                   FontSize="28"
+                   FontAttributes="Bold"
+                   TextColor="Black"
+                   Grid.Column="1" />
         </Grid>
     </Shell.TitleView>
 
-
-
-
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ScrollView>
+            <StackLayout Padding="20" Spacing="25">
+                <Label Text="Сообщения"
+                       FontSize="20"
+                       FontAttributes="Bold"
+                       TextColor="Black"
+                       HorizontalOptions="Center"/>
+
+                <ListView ItemsSource="{Binding Notifications}"
+                          HasUnevenRows="True"
+                          SeparatorVisibility="Default"
+                          Margin="0,0,0,10">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Frame Padding="10" Margin="5" CornerRadius="10" BackgroundColor="#f0f0f0" HasShadow="True">
+                                    <StackLayout>
+                                        <Label Text="{Binding SenderName}"
+                                               FontSize="14"
+                                               FontAttributes="Bold"
+                                               TextColor="#3366cc" />
+                                        <Label Text="{Binding Message}"
+                                               FontSize="14"
+                                               TextColor="Black" />
+                                        <Label Text="{Binding CreatedAt, StringFormat='{0:dd.MM.yyyy HH:mm}'}"
+                                               FontSize="12"
+                                               TextColor="Gray"
+                                               HorizontalOptions="End"/>
+                                    </StackLayout>
+                                </Frame>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
