--- a/DarkFit app/DarkFit app/BuyPage.xaml
+++ b/DarkFit app/DarkFit app/BuyPage.xaml
@@ -4,6 +4,32 @@
              x:Class="DarkFit_app.BuyPage"
              BackgroundColor="#f1f2f3"
              Title="Корзина">
+
+
+    <Shell.TitleView>
+        <Grid ColumnDefinitions="*,Auto,*"
+      VerticalOptions="Center"
+      Padding="0,0,0,0">
+            <Image Source="darkfitCaption.png"
+           HorizontalOptions="Start"
+           VerticalOptions="Center" 
+           Grid.Column="0"
+           Margin="0,0"/>
+            <Label Text="Корзина"
+           HorizontalOptions="Center"
+           HorizontalTextAlignment="Center"
+           VerticalOptions="Center"
+           Margin="0,0,35,0"
+           TextColor="Black"
+           FontAttributes="Bold"
+           FontSize="28"
+           Grid.Column="1"/>
+        </Grid>
+
+    </Shell.TitleView>
+
+
+
     <ContentPage.Content>
         <StackLayout Padding="10">
 
