--- a/DarkFit app/DarkFit app/MassageOrder.xaml
+++ b/DarkFit app/DarkFit app/MassageOrder.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="DarkFit_app.MassageOrder">
+             x:Class="DarkFit_app.MassageOrder"
+             BackgroundColor="#f5f5f5">
 
 
     <Shell.TitleView>
@@ -15,6 +16,7 @@
        HorizontalOptions="Center"
        HorizontalTextAlignment="Center"
        VerticalOptions="Center"
+       Margin="0,0,35,0"
        TextColor="Black"
        FontAttributes="Bold"
        FontSize="28"
