--- a/DarkFit app/DarkFit app/MenuPopup.xaml
+++ b/DarkFit app/DarkFit app/MenuPopup.xaml
@@ -19,14 +19,18 @@
             HorizontalOptions="End"
             VerticalOptions="Start">
             <StackLayout Spacing="10">
-                <Label Text="💰 Бонусы: 0₽" FontSize="24" TextColor="Black" />
-                <Label Text="⚙️ Настройки" FontSize="24" TextColor="Black" />
+                <Label Text="💰 Баланс: 0₽" FontSize="24" TextColor="Black" />
+                <Label Text="⚙️ Настройки" FontSize="24" TextColor="Black">
+                    <Label.GestureRecognizers>
+                        <TapGestureRecognizer  Tapped="settingsButton_Clicked" />
+                    </Label.GestureRecognizers>
+                </Label>
                 <Label Text="💬 Обратная связь" FontSize="24" TextColor="Black">
                     <Label.GestureRecognizers>
                         <TapGestureRecognizer Tapped="feedbackButton_CLicked"  />
                     </Label.GestureRecognizers>
                 </Label>
-                <Label Text="🚪 Выйти" FontSize="24" TextColor="Red">
+                <Label Text="🚪 Выход" TextTransform="Uppercase" FontSize="24" TextColor="Red">
                     <Label.GestureRecognizers>
                         <TapGestureRecognizer Tapped="logoutButton_Clicked" />
                     </Label.GestureRecognizers>
