--- a/DarkFit app/DarkFit app/NotificationPage.xaml
+++ b/DarkFit app/DarkFit app/NotificationPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DarkFit_app.NotificationPage"
              Title="Уведомления"
-             BackgroundColor="White">
+             BackgroundColor="#f1f2f3">
 
     <Shell.TitleView>
         <Grid ColumnDefinitions="60,*,60" VerticalOptions="Center">
@@ -25,35 +25,44 @@
 
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout Padding="20" Spacing="25">
-                
+            <StackLayout Spacing="10">
 
-                <ListView ItemsSource="{Binding Notifications}"
-                          HasUnevenRows="True"
-                          SeparatorVisibility="Default"
-                          Margin="0,0,0,10">
+
+                <ListView x:Name="NotificationListView"
+                      ItemsSource="{Binding Notifications}"
+                      ItemTapped="OnNotificationTapped"
+                      HasUnevenRows="True"
+                      SeparatorVisibility="None"
+                      Margin="10">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
-                                <Frame Padding="10" Margin="5" CornerRadius="10" BackgroundColor="#f0f0f0" HasShadow="True">
+                                <Frame Padding="10" CornerRadius="10" Margin="5" BackgroundColor="White" BorderColor="LightGray" >
                                     <StackLayout>
-                                        <Label Text="{Binding SenderName}"
-                                               FontSize="14"
-                                               FontAttributes="Bold"
-                                               TextColor="#3366cc" />
+                                        <Grid ColumnDefinitions="*,Auto">
+                                            <Label Text="{Binding SenderName}"
+                                   FontSize="26"
+                                   TextColor="#1d3ade"
+                                   FontAttributes="Bold"
+                                   Grid.Column="0" />
+                                            <Label Text="{Binding CreatedAt, StringFormat='{0:dd.MM.yyyy HH:mm}'}"
+                                   FontSize="22"
+                                   TextColor="Black"
+                                   HorizontalTextAlignment="End"
+                                   Grid.Column="1" />
+                                        </Grid>
                                         <Label Text="{Binding Message}"
-                                               FontSize="14"
-                                               TextColor="Black" />
-                                        <Label Text="{Binding CreatedAt, StringFormat='{0:dd.MM.yyyy HH:mm}'}"
-                                               FontSize="12"
-                                               TextColor="Gray"
-                                               HorizontalOptions="End"/>
+                               FontSize="26"
+                               TextColor="Black"
+                               Margin="0,5,0,0"/>
                                     </StackLayout>
                                 </Frame>
                             </ViewCell>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
+
+
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
